--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+<p>
+  <strong>Name:</strong>
+  <%= @restaurant.name %>
+</p>
+
+<p>
+  <strong>Address:</strong>
+  <%= @restaurant.address %>
+</p>
+
+<p>
+  <strong>Phone Number:</strong>
+  <%= @restaurant.phone_number%>
+</p>
+
+<p>
+  <strong>Category:</strong>
+  <%= @restaurant.category%>
+</p>
+
+<% @restaurant.reviews.each do |review| %>
+  <li><%= review.content %></li>
+<% end %>
+<br>
+<%= link_to 'Add a new review', new_restaurant_review_path(@restaurant) %>
+<br>
+<%= link_to 'Back', restaurants_path %>
