--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -27,6 +27,12 @@
 </div>
 <% end %>
 <br>
-<%= link_to 'Add a new review', new_restaurant_review_path(@restaurant) %>
+<h1>Create a new review for <%= @restaurant.name %></h1>
+
+<%= simple_form_for [@restaurant, @review] do |f| %>
+  <%= f.input :content%>
+  <%= f.input :rating%>
+  <%= f.submit "add a review", class: "btn btn-primary" %>
+<% end %>
 <br>
 <%= link_to 'Back', restaurants_path %>
